<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#121212">

    <!-- MAIN CONTENT -->

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@color/white"
            android:title=""
            android:titleTextColor="#000000" />
        <!-- HISTORY -->

        <TextView
            android:id="@+id/historyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="end"
            android:padding="8dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="18sp" />

        <!-- DISPLAY -->

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="end|bottom"
            android:padding="20dp"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="32sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="32sp"/>

        <!-- BUTTONS -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- ROW 1 -->

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/clear"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Dark_Red" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnPercent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/percent"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Orange_500" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnDel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/del"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Dark_Red" />

            </LinearLayout>

            <!-- ROW 2 -->

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/seven"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/eight"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/nine"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/divide"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Orange_500" />

            </LinearLayout>

            <!-- ROW 3 -->

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/four"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/five"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/six"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/multiplication"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Orange_500" />

            </LinearLayout>

            <!-- ROW 4 -->

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/one"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/two"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/three"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/substruct"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="#E65100" />

            </LinearLayout>

            <!-- ROW 5 -->

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/zero"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray"
                    tools:ignore="DuplicateSpeakableTextCheck"/>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/dot"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Charcoal_Gray" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/equal"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="#2E7D32" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnPlus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/sum"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Orange_500" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>